--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,12 @@ dependencies:
   permission_handler: ^10.4.3
   flutter_tts: ^3.8.2
 
+  google_mlkit_text_recognition: ^0.10.0
+  google_mlkit_object_detection: ^0.10.0
+
+  flutter_sound: ^9.2.13
+  google_ml_kit: ^0.16.2
+
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
