--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,13 +11,15 @@ dependencies:
     sdk: flutter
 
   camera: ^0.10.5
-  flutter_tflite: ^1.0.1
+  image_picker: ^1.0.4
+  flutter_speed_dial: ^7.0.0
+#  flutter_tflite: ^1.0.1
   flutter_vision: ^1.1.4
   permission_handler: ^10.4.3
   flutter_tts: ^3.8.2
 
   google_mlkit_text_recognition: ^0.10.0
-  google_mlkit_object_detection: ^0.10.0
+#  google_mlkit_object_detection: ^0.10.0
 
 #  flutter_sound: ^9.2.13
 #  google_ml_kit: ^0.16.2
